[button] Fix button wrapping

--- a/src/components/button/sass/button.sass
+++ b/src/components/button/sass/button.sass
@@ -15,6 +15,7 @@
     text-decoration: none
     outline: none
     user-select: none
+    white-space: nowrap
 
     &:hover
         background-color: #c0c0c0
@@ -81,6 +82,7 @@
     vertical-align: middle
     color: #4B4B4B
     transition: all 0.15s
+    overflow-x: scroll
 
     &:hover
         background-color: #f1f1f1
@@ -97,7 +99,7 @@
         &:hover
             cursor: pointer
             background-color: #d4d4d4
-        
+
     & .disabled
         cursor: not-allowed
         box-shadow: none
